@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.2-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-02 18:53:49, took 00:12:21, with 50 workers, on 4128 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2026-01-02 19:20:52, took 00:13:31, with 50 workers, on 4130 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -92,6 +92,8 @@ http://sources.freertr.org/cfg/conn-dlsw10.tst;conn-dlsw10.tst;success;sep tunne
 http://sources.freertr.org/cfg/conn-dlsw11.tst;conn-dlsw11.tst;success;ethernet tunneling with dlsw
 http://sources.freertr.org/cfg/conn-dlsw12.tst;conn-dlsw12.tst;success;vlan tunneling with dlsw
 http://sources.freertr.org/cfg/conn-dlsw13.tst;conn-dlsw13.tst;success;tunnel interface with dlsw
+http://sources.freertr.org/cfg/conn-dvbgse01.tst;conn-dvbgse01.tst;success;dvbgse without fragmentation
+http://sources.freertr.org/cfg/conn-dvbgse02.tst;conn-dvbgse02.tst;success;dvbgse with fragmentation
 http://sources.freertr.org/cfg/conn-eoip01.tst;conn-eoip01.tst;success;eoip over ipv4
 http://sources.freertr.org/cfg/conn-eoip02.tst;conn-eoip02.tst;success;eoip over ipv6
 http://sources.freertr.org/cfg/conn-eoip03.tst;conn-eoip03.tst;success;eoip over loopback
