@@ -17761,3 +17761,6 @@ qc pass: bgp routemap filtering with asany
 qc pass: bgp routemap filtering with asany with soft-reconfig
 qc pass: bgp routepolicy filtering with asany
 qc pass: bgp routepolicy filtering with asany with soft-reconfig
+---------------------------------- 2026-01-02 19:07:21 26.1.2
+qc pass: dvbgse without fragmentation
+qc pass: dvbgse with fragmentation
